--- a/LabReposicion/LabReposicion.csproj
+++ b/LabReposicion/LabReposicion.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwRoot\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
